--- a/python/py-immutables/Portfile
+++ b/python/py-immutables/Portfile
@@ -4,16 +4,16 @@ PortSystem          1.0
 PortGroup           python 1.0
 
 name                py-immutables
-version             0.9
+version             0.20
 categories-append   devel
 license             Apache-2
 
-python.versions     35 36 37
+python.versions     38 39 310 311 312
 
 maintainers         {@jandemter demter.de:jan} openmaintainer
 
 description         A high-performance immutable mapping type for Python
-long_description    An immutable mapping type for Python.  The underlying \
+long_description    An immutable mapping type for Python. The underlying \
                     datastructure is a Hash Array Mapped Trie (HAMT) used \
                     in Clojure, Scala, Haskell, and other functional \
                     languages. This implementation is used in CPython 3.7 \
@@ -21,12 +21,14 @@ long_description    An immutable mapping type for Python.  The underlying \
 
 homepage            https://github.com/MagicStack/immutables
 
-checksums           rmd160  40185d1e07091e051eb91caeddbe1f3cba3febfe \
-                    sha256  d71d1c822498646143270580dd6f743bb31ab89ae0ded8b2307c356d3a00f1c0 \
-                    size    37754
+checksums           rmd160  81898e938012eda098ee17e24f9fa7fd6fea5cae \
+                    sha256  1d2f83e6a6a8455466cd97b9a90e2b4f7864648616dfa6b19d18f49badac3876 \
+                    size    88933
 
 if {${name} ne ${subport}} {
     depends_build-append    port:py${python.version}-setuptools
+
+    compiler.c_standard 1999
 
     test.run            yes
 }
