py-numpy: prevent opportunistic linking to random BLAS implementations

--- a/python/py-numpy/Portfile
+++ b/python/py-numpy/Portfile
@@ -14,7 +14,7 @@ description             The core utilities for the scientific library scipy for 
 long_description        {*}${description}
 
 github.setup            numpy numpy 1.26.4 v
-revision                0
+revision                1
 
 checksums               rmd160  7f094022d62015d8ea78da78b37fd6f4f4e3076b \
                         sha256  2a02aba9ed12e4ac4eb3ea9421c420301a0c6460d9830d74a9df87efa4912010 \
@@ -48,6 +48,16 @@ compiler.cxx_standard 2011
 github.livecheck.regex {(\d+(?:\.\d+)+)}
 
 if {${name} ne ${subport}} {
+    PortGroup               conflicts_build 1.0
+
+    # If blis is available in PATH, numpy opportunistically links to it,
+    # ignoring a chosen variant. Resulting library is broken:
+    # https://trac.macports.org/ticket/67490
+    # https://trac.macports.org/ticket/69538
+    # TODO: add variants for blis and flexiblas, however blis
+    # can be enabled only after lapack support added into it.
+    conflicts_build         blis flexiblas
+
     set PATCH_PY_EXT ""
     if {${python.version} == 27} {
         github.setup        numpy numpy 1.16.6 v
